--- a/style3.css
+++ b/style3.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Poppins', sans-serif; /* Change to Poppins */
     margin: 0;
     padding: 0;
     line-height: 1.6;
